[package]
name = "aaronia-rtsa"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Driver for Aaronia RTSA"

[workspace]
members = [
    ".",
    "aaronia-rtsa-sys",
]

[dependencies]
aaronia-rtsa-sys = { path = "./aaronia-rtsa-sys", version = "0.0.3" }
gnuplot = "0.0.37"
num-complex = "0.4.2"
rustfft = "6.1.0"
thiserror = "1.0.38"
widestring = "1.0.2"
