[package]
name = "aaronia-rtsa"
version = "0.0.5"
description = "High-level bindings for Aaronia Spectran devices"
documentation = "https://www.fleark.de/doc/aaronia_rtsa/"
edition = "2021"
homepage = "https://www.futuresdr.org"
license = "Apache-2.0"
repository = "https://github.com/FutureSDR/aaronia-rtsa"

[workspace]
members = [
    ".",
    "aaronia-rtsa-sys",
]

[dependencies]
aaronia-rtsa-sys = { path = "./aaronia-rtsa-sys", version = "0.0.4" }
num-complex = "0.4.2"
thiserror = "1.0.38"
widestring = "1.0.2"

[dev-dependencies]
gnuplot = "0.0.37"
rustfft = "6.1.0"
